# simple_notes_api

./: TODO.md  pyproject.toml
IVahit/: __init__.py  engines.py  mylog.py  scripts.py
IVahit/api/: __init__.py
IVahit/crud/: __init__.py
IVahit/model/: __init__.py  _model.py  main.py
test/: crud_test.py
